<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.philipoy.android.quickie.activity.ViewContactActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/hint_contact_name"
        android:textAllCaps="true"
        android:id="@+id/label_contact_name"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        tools:text="John Doe"
        android:id="@+id/view_contact_name"
        android:layout_below="@id/label_contact_name"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="@dimen/activity_vertical_margin"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/hint_contact_phone"
        android:textAllCaps="true"
        android:id="@+id/label_contact_phone"
        android:layout_below="@id/view_contact_name"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        tools:text="0123456789"
        android:id="@+id/view_contact_phone"
        android:layout_below="@+id/label_contact_phone"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/view_contact_name"
        android:layout_alignEnd="@+id/view_contact_name"
        android:layout_marginBottom="@dimen/activity_vertical_margin"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/hint_contact_delete_date"
        android:textAllCaps="true"
        android:id="@+id/label_contact_eol"
        android:layout_below="@id/view_contact_phone"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        tools:text="2016-07-01"
        android:id="@+id/view_contact_eol"
        android:layout_below="@+id/label_contact_eol"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/view_contact_phone"
        android:layout_alignEnd="@+id/view_contact_phone"
        android:layout_marginBottom="@dimen/activity_vertical_margin"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_call"
        android:id="@+id/contact_call_btn"
        android:layout_below="@+id/view_contact_eol"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="callContactAction"/>

</RelativeLayout>
